--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Store</string>
+    <string name="home">خانه</string>
+    <string name="profile">پروفایل</string>
+    <string name="cart">سبد خرید</string>
 </resources>
